--- a/WpfApp2/View/MainUserControl/LoginUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUserControl.xaml
@@ -4,23 +4,24 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WpfApp2.View.MainUserControl"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
     FontFamily="Arial Rounded MT Bold"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="70" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <Image Source="/Images/ui-bg-green.jpg"
-               Grid.RowSpan="2"
-               Stretch="UniformToFill"/>
 
-        <!--ЧТО ДЕЛАТЬ? Binding Path kak?-->
+        <Image
+            Grid.RowSpan="2"
+            Source="/Images/ui-bg-green.jpg"
+            Stretch="UniformToFill" />
+
+        <!--  ЧТО ДЕЛАТЬ? Binding Path kak?  -->
         <Border
             Width="150"
             Height="40"
@@ -41,65 +42,67 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
             Click="Button_Click"
-            Style="{StaticResource MaterialDesignIconButton}">
+            Style="{StaticResource MaterialDesignIconForegroundButton}">
             <materialDesign:PackIcon Foreground="White" Kind="Close" />
         </Button>
-        <Border Grid.Row="1"
-                Background="White"
-                Width="400"
-                Height="280"
-                CornerRadius="30"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center">
-            
-        </Border>
-        <StackPanel HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Orientation="Vertical"
-                    Grid.Row="1">
-            <Border CornerRadius="80"
-                    Grid.Row="1"
-                    Width="120"
-                    Height="120"
-                    Effect="{StaticResource MaterialDesignElevationShadow6}">
+        <Border
+            Grid.Row="1"
+            Width="400"
+            Height="280"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="White"
+            CornerRadius="30" />
+        <StackPanel
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Orientation="Vertical">
+            <Border
+                Grid.Row="1"
+                Width="120"
+                Height="120"
+                CornerRadius="80"
+                Effect="{StaticResource MaterialDesignElevationShadow6}">
                 <Border.Background>
-                    <ImageBrush ImageSource="/Images/user-image.jpeg"
-                                Stretch="UniformToFill"/>
+                    <ImageBrush ImageSource="/Images/user-image.jpeg" Stretch="UniformToFill" />
                 </Border.Background>
             </Border>
 
-            <TextBlock Text="Login"
-                       Margin="0 5 0 5"
-                       FontWeight="Bold"
-                       FontSize="14"/>
-            <TextBlock Text="Name LastName"
-                       Margin="0 0 0 5"/>
-            <TextBlock Text="Age"
-                       Margin="0 0 0 5"/>
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        Margin="0 5 0 0">
-                <materialDesign:PackIcon Kind="Clock"
-                                         Margin="0 0 2 0"/>
-                <TextBlock Text="RegistrationDate"/>
+            <TextBlock
+                Margin="0,5,0,5"
+                FontSize="14"
+                FontWeight="Bold"
+                Text="Login" />
+            <TextBlock Margin="0,0,0,5" Text="Name LastName" />
+            <TextBlock Margin="0,0,0,5" Text="Age" />
+            <StackPanel
+                Margin="0,5,0,0"
+                HorizontalAlignment="Center"
+                Orientation="Horizontal">
+                <materialDesign:PackIcon Margin="0,0,2,0" Kind="Clock" />
+                <TextBlock Text="RegistrationDate" />
             </StackPanel>
             <Button
-                    Width="100"
-                    Height="18"
-                    Margin="0,6,0,1"
-                    Padding="0"
-                    HorizontalAlignment="Center"
-                    Style="{StaticResource MaterialDesignFlatButton}">
+                x:Name="SignOutBtn"
+                Width="100"
+                Height="18"
+                Margin="0,6,0,1"
+                Padding="0"
+                HorizontalAlignment="Center"
+                Click="SignOutBtn_Click"
+                Style="{StaticResource MaterialDesignFlatButton}">
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Logout"
-                                             Margin="0 2 0 0"
-                                             Foreground="#FF7BCE49"/>
+                    <materialDesign:PackIcon
+                        Margin="0,2,0,0"
+                        Foreground="#FF7BCE49"
+                        Kind="Logout" />
                     <TextBlock
-                            Margin="2,1,0,0"
-                            VerticalAlignment="Center"
-                            Foreground="#FF7BCE49"
-                            FontSize="15"
-                            Text="SIGN OUT" />
+                        Margin="2,1,0,0"
+                        VerticalAlignment="Center"
+                        FontSize="15"
+                        Foreground="#FF7BCE49"
+                        Text="SIGN OUT" />
                 </StackPanel>
             </Button>
         </StackPanel>
